# hector

./: .gitignore  BOB_PERFORMANCE_TRIAGE.md  Cargo.toml  HECTOR_INSTALL_SETUP_PLAN.md  HECTOR_SPEC.md  LICENSE  README.md  bob.yaml  hector-install-setup.campaign.yaml  hector.yaml
.maple/: graph.db
skills/hector-frontier/: SKILL.md
src/: cli.rs  config.rs  conventions.rs  dispatch.rs  guidance.rs  main.rs  maple.rs  mcp.rs  model.rs  planner.rs  schema.rs
tests/: backup_test.rs  check.rs
