[package]
name = "hector"
version = "0.4.1"
edition = "2021"
description = "TDD slice planner for Bob campaigns"
license = "Apache-2.0"

[[bin]]
name = "hector"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rmcp = { version = "0.16", features = ["server", "macros", "transport-io"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "io-util"] }

[profile.release]
strip = true
